add optional author / website_url

--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,8 @@
     "manifest_version": 1,
     "name": "The Neato Mod",
     "description": "I make things neato",
+    "author": "Justin Mayfield",
+    "website_url": "https://saucellc.io",
     "version": "0.0.1",
     "content_js": [
         "contents/run_everywhere.mjs"
